Fixed alignment issues with front-end (#8)
* Added front end files

* Restructured folders to match with current master structure

* Changed gradient background to final color scheme

* Changed the navigation bar to be within the header on every page. Also, changed the heading of the index page to be centered with the body text.

* Fixed alignment issues with login and signup divs, as well as centering the logo on the bottom of the login and signup pages.

--- a/html/styles.css
+++ b/html/styles.css
@@ -7,7 +7,7 @@
 
 body
 {
-  background: linear-gradient(45deg, #36008D, #00C9B8, #FCD200, #FE5E54, #FFB3C1);
+  background: linear-gradient(45deg, #7286D3, #34385E, #E5E0FF);
   background-size: 1000% 1000%;
   animation: GradientBackground 10s ease infinite;
   font-family: youngserif;
@@ -23,11 +23,9 @@ img
 {
     padding: 25px;
     margin-bottom: 10px;
-    text-align: left;
     background: black;
     height: 80px;
     color: white;
-    font-size: 30px;
     display: flex;
 }
 
@@ -57,18 +55,18 @@ img
 #loginDiv
 {
     display: inline-block;
-    padding: 15px;
     font-size: 20px;
     text-align: left;
     height: 100px;
     width: 150px;
-    justify-content: center;
+    margin-top: 15px;
+    margin-right: 15px;
 }
 
 #loginButtonDiv
 {
+    margin-top: 15px;
     vertical-align: top;
-    margin-top: 25px;
     display: inline-block;
     font-size: 20px;
     text-align: left;
@@ -99,17 +97,16 @@ img
 #logo_only
 {
     height: 150px;
-    width: auto;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 #logo_header
 {
-    flex: 50%;
     height: 80px;
-    width: auto;
+    width: 25%;
 }
 
 #login_link
@@ -133,24 +130,24 @@ img
 #createAccDiv
 {
     display: inline-block;
-    padding: 15px;
     font-size: 20px;
     text-align: left;
     height: 100px;
     width: 150px;
     justify-content: center;
+    margin-top: 15px;
+    margin-right: 15px;
 }
-
 
 #createAccButtonDiv
 {
     vertical-align: top;
-    margin-top: 25px;
     display: inline-block;
     font-size: 20px;
     text-align: left;
     height: 100px;
     width: 100px;
+    margin-top: 15px;
 
 }
 
@@ -163,7 +160,7 @@ ul
 {
     list-style-type:none;
     margin: 0;
-    padding: 0;
+    padding: 15px;
     overflow: hidden;
     background-color: black;
 }
@@ -199,15 +196,6 @@ li a:hover:not(.active)
 
 }
 
-#top_right
-{
-    font-size: 40px;
-    color: black;
-    position: absolute;
-    top: 8px;
-    right: 16px;
-}
-
 #main_logo
 {
     height: 200px;
@@ -224,21 +212,27 @@ li a:hover:not(.active)
     height: 100%;
 }
 
-#main_text
+#main_text_wrapper
 {
     width: 45%;
     height: 100%;
     position: absolute;
+    background: rgba(255, 255, 255, .3);
     bottom: 0px;
     right: 0px;
-    background: rgba(255, 255, 255, .3);
     margin-right: 5%;
+}
+
+#main_header
+{
+    margin: 5%;
+    font-size: 40px;
+    color: black;
 }
 
 #main_inner_text
 {
     margin: 5%;
-    margin-top: 11%;
     font-size: 20px;
 }
 
